--- a/src/app/components/edit-profile/edit-profile.component.scss
+++ b/src/app/components/edit-profile/edit-profile.component.scss
@@ -1,144 +1,149 @@
-.container{
+.container {
     margin-top: 3rem;
 }
-.title-head{
+
+.title-head {
     width: 100%;
     display: flex;
     justify-content: center;
-    & .title-edit{
-        width: 90%;
-        & .edit{
-            & p{
-                font-size: 40px;
-            }
-
-        }
-    }
-    & hr{
-        width: 100%;
-        border: 1.5px solid #b5b5b5;
-        margin-top: 1.5rem;
-    }
 }
+
+.title-edit {
+    width: 90%;
+}
+
+.edit p {
+    font-size: 40px;
+}
+
+hr {
+    width: 100%;
+    border: 1.5px solid #b5b5b5;
+    margin-top: 1.5rem;
+}
+
 .btn-back {
     display: flex;
     justify-content: flex-end;
     margin-top: 0.5rem;
     margin-right: 4rem;
-    & button{
-        border-radius: 11px;
-    }
 }
-.col-5{
+
+.btn-back button {
+    border-radius: 11px;
+}
+
+.col-5 {
     display: flex;
     justify-content: center;
     padding: 2rem;
-    & .icon{
-        width: 400px;
-        height: 400px;
-        & img{
-            width: 100%;
-            height: 100%;
-            border-radius: 360px;
-            aspect-ratio: 1/1;
-            object-fit: cover;
-            object-position: center top;
-        }
-        p {
-            width: 100%;
-            height: 100%;
-            font-size: 18px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #777; /* Adjust the color as needed */
-            background-color: #F9F9FC;
-            border-radius: 30px;
-        }
-    }
 }
-.col-7{
+
+.icon {
+    width: 400px;
+    height: 400px;
+}
+
+.icon img {
+    width: 100%;
+    height: 100%;
+    border-radius: 360px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    object-position: center top;
+}
+
+.icon p {
+    width: 100%;
+    height: 100%;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #777;
+    background-color: #F9F9FC;
+    border-radius: 30px;
+}
+
+.col-7 {
     padding: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.card-head{
-    width: 500px;
-    & .card-name-about{
-        background-color: #F9F9FC;
-        border-radius: 30px;
-        padding: 1rem;
-        & .firstname{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        & .lastname{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        & .about{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        & button{
-            background-color: #1F426B;
-            border-radius: 11px;
-            color: white;
-            height: 28px;
-        }
-    }
-    & .container-post{
-        background-color: #F9F9FC;
-        border-radius: 30px;
-        padding: 1rem;
-        margin-top: 1rem;
-       & .list-post{
-        & .list-post-body{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 1rem;
-            & .input-post{
-                width: 200px;
-            }
-        }
-    }
 
-    }
-    & span{
-        font-size: 16px;
-        font-weight: 500;
-        width: 50px;
-    }
+.card-head {
+    width: 500px;
+}
+
+.card-name-about {
+    background-color: #F9F9FC;
+    border-radius: 30px;
+    padding: 1rem;
+}
+
+.firstname,
+.lastname,
+.about {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-name-about button {
+    background-color: #1F426B;
+    border-radius: 11px;
+    color: white;
+    width: 25px;height: 30px;
+}
+
+.container-post {
+    background-color: #F9F9FC;
+    border-radius: 30px;
+    padding: 1rem;
+    margin-top: 1rem;
+}
+
+.list-post .list-post-body {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.list-post-body .input-post {
+    width: 200px;
+}
+
+span {
+    font-size: 16px;
+    font-weight: 500;
+    width: 50px;
 }
 
 ::ng-deep .mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align {
     display: none !important;
 }
-mat-form-field{
+
+mat-form-field {
     margin: 1rem;
 }
 
-.btn-delete{
+.btn-delete,
+.btn-edit {
     border-radius: 11px;
 }
-.btn-edit{
-    border-radius: 11px;
-}
 
-
-
+/* Card Input Styles */
 .card-input {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 10px;
     width: 100%;
+    overflow-x: auto; /* เพิ่ม overflow-x เพื่อให้สามารถเลื่อนการ์ดได้ */
 }
+
 
 .file-input-container {
     width: 100%;
@@ -157,8 +162,7 @@ mat-form-field{
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-between; /* จัดตัวข้อความตรงกลาง และปุ่มด้านล่างสุดต่อกัน */
-    border: 2px dashed #ccc;
+    justify-content: space-between;
     padding: 20px;
     cursor: pointer;
     background-size: cover;
@@ -166,38 +170,121 @@ mat-form-field{
     background-repeat: no-repeat;
     width: 100%;
     aspect-ratio: 1 / 1;
-    &::before {
-        content: ""; /* สร้างส่วนพิเศษข้างหน้า */
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5); /* สีมืด (RGBA: 0, 0, 0) พร้อมค่าความโปร่งแสง (0.5) */
-    }
-
-    & p {
-        z-index: 100;
-        color: white;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        
-    }
-    & .btn{
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-        border: none;
-    }
+    transition: transform 0.5s ease, box-shadow 0.3s ease;
 }
-button{
+
+.box__dragndrop::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.box__dragndrop:hover{
+    transform: scale(1.03);
+}
+
+.box__dragndrop p {
+    z-index: 100;
+    color: white;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.box__dragndrop .btn {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    border: none;
+}
+
+button {
     width: 75px;
 }
-h1{
+
+h1 {
     margin-top: 1rem;
     text-align: center;
     font-size: 30px;
     font-weight: 500;
 }
 
+.input-post {
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.5s ease, box-shadow 0.3s ease;
+}
+
+
+.input-post input[type="file"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.file-input-overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    overflow: hidden; 
+      transition: transform 0.5s ease, box-shadow 0.3s ease;
+    
+}
+
+
+.file-input-overlay img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    aspect-ratio: 1/1;
+    transition: transform 0.5s ease, box-shadow 0.3s ease;
+
+}
+.file-input-overlay p {
+    width: 100%;
+    height: 200px;
+    background-color: white;
+    margin-top: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    transition: transform 0.5s ease, box-shadow 0.3s ease;
+}
+
+.input-post-body {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.input-post-body button {
+    width: 25px;height: 30px;
+}
+.btn{
+    & button{
+        width: 100%
+    }
+}
+
+button{
+    transition: transform 0.5s ease, box-shadow 0.3s ease;
+}
+button:hover{
+        transform: scale(1.1);
+}
+
+.input-post:hover{
+    transform: scale(1.03);
+}
