--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -16,14 +16,14 @@
         <div class="title-head">
             <div class="icon-profile">
                 <img src="{{ icon }}" alt="icon">
-                <img  *ngIf="!icon" src="https://firebasestorage.googleapis.com/v0/b/project-web-2-2.appspot.com/o/assets%2Fimg%2FiconRank%2F434211518_782056206784597_9220203625929879844_n.jpg?alt=media&token=c2a3d632-cf4f-43c3-a785-75cce2b4f1d7" alt="icon">
+                <img  *ngIf="!icon" src="https://firebasestorage.googleapis.com/v0/b/project-web-2-2.appspot.com/o/assets%2Fimg%2FiconRank%2Fperson-profile-image-icon.png?alt=media&token=3b2664ba-a62a-4b13-8c64-b23f316572ff" alt="icon">
                 <input #fileInput type="file" (change)="UploadIcon($event, first_name, user_id)" accept="image/*">
             </div>
             
             <span>{{ first_name }} {{ last_name }}</span>
         </div>
         <div class="btn">
-            <button  *ngIf="posts " class="btn-statistics" style="background-color: #1F426B; color: white;" mat-flat-button (click)="viewStat(user_id)">Statistics</button>
+            <button class="btn-statistics" style="background-color: #1F426B; color: white;" mat-flat-button (click)="viewStat(user_id)">Statistics</button>
             <button class="btn-edit" style="background-color: #F51E3C; color: white;" mat-flat-button (click)="editProfile(user_id)">Edit Profile</button>
         </div>
     </div>
@@ -35,12 +35,19 @@
         </div>
         <div class="col-7">
             <div class="container-card">
-                <div class="card-import-post">
+                <div *ngIf="post_id" class="card-import-post">
                     <label for="image" class="custom-file-upload">
                         <span>{{ fileName }}</span>
                         <input id="file{{user_id}}" name="files{{first_name}}" type="file" accept="image/*" (change)="UploadPost($event, user_id, first_name)">
                     </label>
                     <button mat-flat-button color="primary" (click)="post()">Post</button>
+                </div>
+                <div *ngIf="!post_id" class="card-import-post">
+                    <label for="image" class="custom-file-upload">
+                        <span>{{ fileName }}</span>
+                        <input id="file{{user_id}}" name="files{{first_name}}" type="file" accept="image/*" (change)="UploadPost($event, user_id, first_name)">
+                    </label>
+                    <button mat-flat-button color="primary" style="margin-left: 0.5rem;" (click)="post()">Post</button>
                 </div>
                 <div *ngFor="let post of posts" class="row">
                     <div class="card-post" *ngIf="post.post_id > 0">
