--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -15,20 +15,21 @@
     <div class="tab">
         <div class="title-head">
             <div class="icon-profile">
-                <img src="{{ icon }}" alt="icon">
-                <img  *ngIf="!icon" src="https://firebasestorage.googleapis.com/v0/b/project-web-2-2.appspot.com/o/assets%2Fimg%2FiconRank%2Fperson-profile-image-icon.png?alt=media&token=3b2664ba-a62a-4b13-8c64-b23f316572ff" alt="icon">
+                <img class="profile-image" *ngIf="icon" [src]="icon" alt="icon">
+                <img class="profile-image" *ngIf="!icon" src="https://firebasestorage.googleapis.com/v0/b/project-web-2-2.appspot.com/o/assets%2Fimg%2FiconRank%2Fperson-profile-image-icon.png?alt=media&token=3b2664ba-a62a-4b13-8c64-b23f316572ff" alt="icon">
                 <input #fileInput type="file" (change)="UploadIcon($event, first_name, user_id)" accept="image/*">
             </div>
+            
             
             <span>{{ first_name }} {{ last_name }}</span>
         </div>
         <div class="btn">
-            <button class="btn-statistics" style="background-color: #1F426B; color: white;" mat-flat-button (click)="viewStat(user_id)">Statistics</button>
+            <button class="btn-statistics" style="background-color: #efeff2; color: #F62643;" mat-flat-button (click)="viewStat(user_id)">Statistics</button>
             <button class="btn-edit" style="background-color: #F51E3C; color: white;" mat-flat-button (click)="editProfile(user_id)">Edit Profile</button>
         </div>
     </div>
     <div class="row">
-        <div  class="col-5">
+        <div class="col-5">
             <h1>About: </h1>
             <p>{{ about }}</p>
             <p *ngIf="!about" style="text-align: center;">No! about, Please add  about your to the edit page.</p>
@@ -40,14 +41,14 @@
                         <span>{{ fileName }}</span>
                         <input id="file{{user_id}}" name="files{{first_name}}" type="file" accept="image/*" (change)="UploadPost($event, user_id, first_name)">
                     </label>
-                    <button mat-flat-button color="primary" (click)="post()">Post</button>
+                    <button mat-flat-button style="background-color: #F62643; color: white;" (click)="post()">Post</button>
                 </div>
                 <div *ngIf="!post_id" class="card-import-post">
                     <label for="image" class="custom-file-upload">
                         <span>{{ fileName }}</span>
                         <input id="file{{user_id}}" name="files{{first_name}}" type="file" accept="image/*" (change)="UploadPost($event, user_id, first_name)">
                     </label>
-                    <button mat-flat-button color="primary" style="margin-left: 0.5rem;" (click)="post()">Post</button>
+                    <button mat-flat-button  style="margin-left: 0.5rem; background-color: #F62643; color: white;" (click)="post()">Post</button>
                 </div>
                 <div *ngFor="let post of posts" class="row">
                     <div class="card-post" *ngIf="post.post_id > 0">
