--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -1,179 +1,202 @@
-.container-fluid{
-    width: 100%;
-    margin-top: 1rem;
-    & p{
-        font-size: 30px;
-    }
+.container-fluid {
+  width: 100%;
+  margin-top: 1rem;
+  & p {
+    font-size: 30px;
+  }
 }
- .banner{
-    & img{
-        width: 100%;
-        height: 40vh;
-        object-fit: cover;
-        object-position: center top;
-    }
+.banner {
+  & img {
+    width: 100%;
+    height: 40vh;
+    object-fit: cover;
+    object-position: center top;
+  }
+  display: flex;
+  justify-content: center;
+  p {
+    width: 100%;
+    height: 40vh;
+    font-size: 18px;
     display: flex;
     justify-content: center;
-        p {
-            width: 100%;
-            height: 40vh;
-            font-size: 18px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #777; /* Adjust the color as needed */
-            background-color: #F9F9FC;
-        }
- }
- 
- .icon-profile {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    background-color: white;
-    border-radius: 360px;
-    display: flex;
     align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    aspect-ratio: 1 / 1;
-  
-    img {
-      width: 200px;
-      height:  200px;
-      object-fit: cover;
-      transform: scale(1.01);
-      border-radius:  360px;
-      aspect-ratio: 1 / 1;
-    }
-    & .hoverable{
-        width: 200px;
-        height: 200px;
-    }
+    color: #777; /* Adjust the color as needed */
+    background-color: #f9f9fc;
+  }
+}
+
+.icon-profile {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  background-color: white;
+  border-radius: 360px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  aspect-ratio: 1 / 1;
+  border: 8px solid  #efeff2;;
+  transition: transform 0.5s ease, box-shadow 0.3s ease;
+  &:hover{
+    transform: scale(1.1);
   }
 
+  img {
+    max-width: 200px;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 360px;
+    aspect-ratio: 1 / 1;
+    padding: 15px;
+  }
+  & .hoverable {
+    width: 200px;
+    height: 200px;
+  }
+}
 
- .tab{
+.tab {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.title-head {
+  display: flex;
+  align-items: center;
+  width: 800px;
+  height: 100px;
+  margin-top: -3rem;
+  margin-left: 3rem;
+  & span {
+    font-size: 40px;
+    font-weight: 500;
+    margin-left: 1rem;
+    margin-top: 4rem;
+  }
+}
+
+.btn {
+  border: none;
+  margin-right: 2rem;
+  padding-top: 1rem;
+}
+.btn-edit {
+  width: 118px;
+  border-radius: 11px;
+}
+.btn-statistics {
+  width: 118px;
+  border-radius: 11px;
+  margin-right: 1rem;
+}
+.col-5 {
+  height: 100%;
+  margin-top: 4rem;
+  background-color: #f9f9fc;
+  border-radius: 30px;
+  padding: 2rem;
+    transform: translateX(10%);
+}
+.col-7 {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
+.card-post {
+  width: 500px;
+  padding: 1rem;
+  background-color: #f9f9fc;
+  border-radius: 30px;
+  margin: 1rem;
+  transition: transform 0.5s ease, box-shadow 0.3s ease;
+  &:hover{
+    transform: scale(1.025);
+  }
+  & .title {
+    display: flex;
+    align-items: center;
+  }
+  & .card-head {
     display: flex;
     justify-content: space-between;
     align-items: center;
- }
- .title-head{
-    display: flex;
-    align-items: center;
-    width: 800px;
-    height: 100px;
-    & span{
-        font-size: 40px;
-        font-weight: 500;
-        margin-left: 1rem;
+    margin-bottom: 1rem;
+    & span {
+      font-size: 16px;
+      font-weight: 500;
+      padding-left: 0.5rem;
     }
- }
+    & .icon {
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      background-color: white;
+      border-radius: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        
+      }
+    }
+  }
+  & .time {
+    & span {
+      font-weight: 200;
+      font-size: 14px;
+    }
+  }
 
- .btn{
-    border: none;
- }
-.btn-edit{
-    width: 118px;
-    border-radius: 11px;
-}
-.btn-statistics{
-    width: 118px;
-    border-radius: 11px;
-    margin-right: 1rem;
-}
-.col-5{
-    height:  100%;
-    margin-top: 6rem;
-    background-color: #F9F9FC;
-    border-radius: 30px;
-    padding: 2rem;
-}
-.col-7{
+  .card-body {
     display: flex;
     justify-content: center;
-}
-.card-post{
-    width: 500px;
-    padding: 1rem;
-    background-color: #F9F9FC;
-    border-radius: 30px;
-    margin: 1rem;
-    & .title{
-        display: flex;
-        align-items: center;
+    transition: transform 0.5s ease, box-shadow 0.3s ease;
+    &:hover{
+      transform: scale(1.1);
     }
-    & .card-head{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 1rem;
-        & span{
-            font-size: 16px;
-            font-weight: 500;
-            padding-left: 0.5rem;
-        }
-        & .icon{
-            width: 50px;
-            height: 50px;
-            border-radius: 100%;
-            background-color: white;
-            border-radius: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-            & img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-        }
+    & img {
+      aspect-ratio: 16/9;
+      width: 300px;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 30px;
     }
-        & .time{
-            & span{
-                font-weight: 200;
-                font-size: 14px;
-            }
+  }
 
-        }
-
-    .card-body{
-        display: flex;
-        justify-content: center;
-        & img{
-            aspect-ratio: 16/9;
-            width: 300px;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 30px;
-        }
-        
+  .card-lower {
+    margin-top: -1rem;
+    & button {
+      cursor: pointer;
+      margin-right: -0.75rem;
+      font-size: 50px;
+      transition: transform 0.5s ease, box-shadow 0.3s ease;
+      &:hover{
+        transform: scale(1.3);
+      }
     }
-    
-    .card-lower{
-        margin-top: -1rem;
-        & button{
-            cursor: pointer;
-            margin-right: -0.75rem;
-            font-size: 50px; 
-        }
-        & p{
-            margin-left: 1.5rem;
-            margin-top: -1.5rem;
-            font-size: 14px;
-            font-weight: 500;
-        }
+    & p {
+      margin-left: 1.5rem;
+      margin-top: -1.5rem;
+      font-size: 14px;
+      font-weight: 500;
+      
     }
+  }
 }
 .btn.like-button.active {
-    color: red;
+  color: red;
 }
 
 .btn.like-button {
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
 }
 .like-icon,
 .chat-icon,
@@ -184,77 +207,95 @@
   height: auto;
 }
 
-
 .card-import-post {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    overflow: hidden;
-    background-color: #F9F9FC;
-    padding: 2rem;
-    border-radius: 30px;
-    transition: transform 0.5s ease, box-shadow 0.3s ease;
-    :hover{
-        transform: scale(1.03);
-    }
-    & button{
-        border-radius: 11px;
-    }
+    height: 90px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  overflow: hidden;
+  background-color: #f9f9fc;
+  padding: 2rem;
+  border-radius: 30px;
+  transition: transform 0.5s ease, box-shadow 0.3s ease;
+  &:hover{
+    transform: scale(1.05);
+  }
+  & button {
+    border-radius: 11px;
+  }
 }
 
 .custom-file-upload {
-    cursor: pointer;
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #fff;
-    color: #333;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    overflow: hidden;
-    width: 320px;
-    border-radius: 11px;
-    transition: transform 0.5s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: white;
+  color: #F62643;
+  border-radius: 5px;
+  overflow: hidden;
+  width: 360px;
+  border-radius: 11px;
+  transition: transform 0.5s ease, box-shadow 0.3s ease;
+  font-size: 16px;
+  font-weight: 500;
+  &:hover{
+    transform: scale(1.1);
+}
 }
 
 .custom-file-upload input[type="file"] {
-    position: absolute;
-    font-size: 100px;
-    right: 0;
-    top: 0;
-    opacity: 0;
-    cursor: pointer;
+  position: absolute;
+  font-size: 100px;
+  right: 0;
+  top: 0;
+  opacity: 0;
+  cursor: pointer;
 }
 
-
 .banner p {
-    position: relative;
+  position: relative;
 }
 
 .banner input[type="file"] {
-    position: absolute;
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    top: 0;
-    left: 0;
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  top: 0;
+  left: 0;
 }
 
 .banner p:hover {
-    background-color: #dbdbdd; /* เปลี่ยนสีพื้นหลังเมื่อ hover */
+  background-color: #dbdbdd; /* เปลี่ยนสีพื้นหลังเมื่อ hover */
 }
 .hoverable:hover {
-    background-color: #dbdbdd; /* เปลี่ยนสีพื้นหลังเมื่อ hover */
+  background-color: #dbdbdd; /* เปลี่ยนสีพื้นหลังเมื่อ hover */
 }
 .banner p {
-    transition: background-color 0.5s ease; /* เพิ่ม transition เพื่อทำให้สีทึบเร็วช้าเมื่อเมาส์เข้าไป */
+  transition: background-color 0.5s ease; /* เพิ่ม transition เพื่อทำให้สีทึบเร็วช้าเมื่อเมาส์เข้าไป */
 }
 .icon-profile input[type="file"] {
-    position: absolute;
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    top: 0;
-    left: 0;
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  top: 0;
+  left: 0;
 }
+
+.btn-statistics{
+    transition: transform 0.5s ease, box-shadow 0.3s ease;
+    &:hover{
+        transform: scale(1.1);
+    }
+}
+
+.btn-edit{
+    transition: transform 0.5s ease, box-shadow 0.3s ease;
+    &:hover{
+        transform: scale(1.1);
+    }
+}
+
