--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -1,19 +1,15 @@
-.container-fluid {
+.container {
   width: 100%;
-  margin-top: 1rem;
-  & p {
-    font-size: 30px;
-  }
 }
 .banner {
+    display: flex;
+    justify-content: center;
   & img {
     width: 100%;
     height: 40vh;
     object-fit: cover;
-    object-position: center top;
+    object-position: center top
   }
-  display: flex;
-  justify-content: center;
   p {
     width: 100%;
     height: 40vh;
@@ -27,6 +23,7 @@
 }
 
 .icon-profile {
+  z-index: 1000;
   position: relative;
   width: 200px;
   height: 200px;
@@ -73,14 +70,14 @@
     font-size: 40px;
     font-weight: 500;
     margin-left: 1rem;
-    margin-top: 4rem;
+    margin-top: 3.5rem;
   }
 }
 
 .btn {
   border: none;
   margin-right: 2rem;
-  padding-top: 1rem;
+  padding-top: 1.5rem;
 }
 .btn-edit {
   width: 118px;
@@ -93,7 +90,7 @@
 }
 .col-5 {
   height: 100%;
-  margin-top: 4rem;
+  margin-top: 4.5rem;
   background-color: #f9f9fc;
   border-radius: 30px;
   padding: 2rem;
@@ -102,7 +99,7 @@
 .col-7 {
   display: flex;
   justify-content: center;
-  margin-top: 1rem;
+  margin-top: 3rem;
 }
 .card-post {
   width: 500px;
