--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -14,21 +14,24 @@
     & .title2{
         font-size: 40px;
         font-family: "Newsreader", serif;
-        font-weight: 100;
+        font-weight: 100;  transition: transform 0.5s ease, box-shadow 0.3s ease;
     }
     & h1{
         margin-top: 3rem;
         font-size: 90px;
         font-family: "Newsreader", serif;
-        font-weight: 400;
+        font-weight: 400;  
+        transition: transform 0.5s ease, box-shadow 0.3s ease;
+        &:hover{
+          transform: scale(1.025);
+        }
     }
     & p{
         margin-top: 3rem;
         font-size: 50px;
         font-family: "Newsreader", serif;
         font-weight: 400;
-    }
-    
+    } 
 }
 .btn-vote{
     margin-top: 3rem;
@@ -36,6 +39,10 @@
         background-color: #F51E3C;
         color: white;
         border-radius: 11px;
+        transition: transform 0.5s ease, box-shadow 0.3s ease;
+        &:hover{
+          transform: scale(1.3);
+        }
     }
 }
 .row{
@@ -53,9 +60,16 @@
         font-family: "Newsreader", serif;
         font-weight: 400;
     }
+    & img{
+        transition: transform 0.5s ease, box-shadow 0.3s ease;
+        &:hover{
+          transform: scale(1.025);
+        }
+    }
 }
 .col-7{
     margin-top: 5rem;
+    
     & h3{
         margin-top: 1rem;
         text-align: start;
@@ -68,6 +82,13 @@
         font-family: "Newsreader", serif;
         font-weight: 400;
         color: black;
+    }
+
+    & img{
+        transition: transform 0.5s ease, box-shadow 0.3s ease;
+        &:hover{
+          transform: scale(1.025);
+        }
     }
 }
 
