--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -174,7 +174,7 @@
       font-size: 50px;
       transition: transform 0.5s ease, box-shadow 0.3s ease;
       &:hover{
-        transform: scale(1.3);
+        transform: scale(1.2);
       }
     }
     & p {
@@ -195,13 +195,19 @@
   border-radius: 5px;
   border: none;
 }
-.like-icon,
 .chat-icon,
 .share-icon {
   font-size: 55%;
   margin-right: -1rem;
   width: 60px;
   height: auto;
+}
+.like-icon{
+    font-size: 55%;
+    margin-right: -1rem;
+    width: 60px;
+    height: auto;
+    margin-bottom: -0.5rem;
 }
 
 .card-import-post {
