Update all files

--- a/src/app/components/admin-homepage/admin-homepage.component.html
+++ b/src/app/components/admin-homepage/admin-homepage.component.html
@@ -3,7 +3,7 @@
     <div class="head-title">
       <span class="title1">Welcome</span><span class="title2"> to website</span>
       <h1>FACEMASH.</h1>
-      <p>" {{first_name}} {{last_name}} "</p>
+      <p>"Admin"</p>
     </div>
     <div class="row">
       <div class="col-5">
