--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -35,3 +35,9 @@ mat-toolbar{
         
     }
 }
+.text-admin{
+  font-size: 12px;
+  color: black;
+  position: fixed;
+  transform: translateX(5%);
+}
