--- a/src/app/components/admin-view-user/admin-view-user.component.scss
+++ b/src/app/components/admin-view-user/admin-view-user.component.scss
@@ -14,6 +14,10 @@
     overflow: hidden;
     transition: transform 0.5s ease, box-shadow 0.3s ease;
     margin: 10px;
+    transition: transform 0.5s ease, box-shadow 0.3s ease;
+    &:hover{
+      transform: scale(1.1);
+    }
     & .card-head {
         & img {
         aspect-ratio: 1/1;
