--- a/src/app/components/ranking/ranking.component.scss
+++ b/src/app/components/ranking/ranking.component.scss
@@ -71,15 +71,21 @@ hr {
       align-items: center;
       margin-top: 0.5rem;
       margin-right: 1.5rem;
+      
       & span {
         font-size: 16px;
         font-weight: 500;
         margin-right: 0.5rem;
+        
       }
       & img {
         border-radius: 30px;
         width: 40px;
         height: 40px;
+        transition: transform 0.5s ease, box-shadow 0.3s ease;
+        &:hover{
+          transform: scale(1.5);
+        }
       }
     }
   }
@@ -191,6 +197,7 @@ h1 {
     height: 130px;
     object-fit: cover;
     aspect-ratio: 16/9;
+    
   }
 
   .right-card-title {
@@ -210,6 +217,10 @@ h1 {
         border-radius: 30px;
         width: 30px;
         height: 30px;
+        transition: transform 0.5s ease, box-shadow 0.3s ease;
+        &:hover{
+          transform: scale(1.5);
+        }
       }
     }
   }
