--- a/src/app/components/show-user-profile/show-user-profile.component.html
+++ b/src/app/components/show-user-profile/show-user-profile.component.html
@@ -1,7 +1,10 @@
 <app-navbar></app-navbar>
 <div class="banner">
     <img *ngIf="banner" src="{{ banner }}" alt="banner image">
-
+    <p *ngIf="!banner" class="hoverable">
+        <span *ngIf="isHovered">Upload Banner</span>
+        <span *ngIf="!isHovered">No picture</span>
+    </p>
 </div>
 <div *ngIf="user_id; else emptyState" class="container">
     <div class="tab">
@@ -35,6 +38,7 @@
                             <div class="title">
                                 <div class="icon">
                                     <img src="{{ icon }}" alt="">
+                                    <img *ngIf="!icon" src="https://firebasestorage.googleapis.com/v0/b/project-web-2-2.appspot.com/o/assets%2Fimg%2FiconRank%2Fperson-profile-image-icon.png?alt=media&token=3b2664ba-a62a-4b13-8c64-b23f316572ff" alt="icon">
                                 </div>
                                 <span>{{ first_name }} {{ last_name }}</span>
                             </div>
