--- a/src/app/components/signin-or-signup/signin-or-signup.component.scss
+++ b/src/app/components/signin-or-signup/signin-or-signup.component.scss
@@ -71,7 +71,7 @@
         height: 600px;
         border-radius: 45px;
         background-size: cover;
-        background-image: url("https://firebasestorage.googleapis.com/v0/b/project-web-2-2.appspot.com/o/assets%2Fimg%2FAcheron%2Fpost%2FAcheron_post1.png?alt=media");
+        background-image: url("https://firebasestorage.googleapis.com/v0/b/project-web-2-2.appspot.com/o/assets%2Fimg%2Fgif%2FInShot_20240327_034213138.gif?alt=media&token=1908c6f3-5d14-43e2-8c49-0550ecd8d025");
         background-repeat: no-repeat;
         background-position: center center;
         .overlay {
@@ -79,7 +79,7 @@
             border-radius: 45px;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.7); 
+            background-color: rgba(0, 0, 0, 0.305); 
             z-index: 1;
           }
         & input{
