--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -3,7 +3,7 @@
     <div class="head-title">
       <span class="title1">Welcome</span><span class="title2"> to website</span>
       <h1>FACEMASH.</h1>
-      <p>" {{first_name}} {{last_name}} "</p>
+      <p>{{first_name}} {{last_name}}</p>
     </div>
     <div class="btn-vote">
       <button mat-flat-button (click)="vote(user_id)">Start Vote</button>
